Fix assessment listing content overflowing container when resized

--- a/src/styles/_academy.scss
+++ b/src/styles/_academy.scss
@@ -84,9 +84,8 @@
     padding: 0;
     text-align: justify;
 
-    .listing-due-icon {
-      vertical-align: baseline;
-      margin-right: 0.4rem;
+    & > * {
+      overflow-wrap: break-word;
     }
   }
 
@@ -114,15 +113,25 @@
   }
 
   .listing-text {
-    padding: 0.5rem 1rem 0.5rem 1.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 1rem;
     border: 1rem;
     display: flex;
     flex-direction: column;
   }
 
-  .listing-title {
+  .listing-header {
+    margin-bottom: 0.8rem;
     display: flex;
-    margin-bottom: 2px;
+    align-items: center;
+    justify-content: space-between;
+
+    .listing-title {
+      margin-bottom: 0;
+
+      h4 {
+        margin-top: 4px;
+      }
+    }
 
     .listing-title-tooltip {
       /* Space out icon tooltips */
@@ -137,46 +146,46 @@
         vertical-align: baseline;
       }
     }
-
-    .#{$ns}-text-overflow-ellipsis {
-      /* Pushes button to the right of container */
-      flex-grow: 1;
-      display: flex;
-    }
-
-    div {
-      /* overwrite default padding */
-      padding: 0;
-      margin-bottom: 0.4rem;
-    }
-
-    .col-xs-2 {
-      /* flush menu button, span.#{$ns}-popover-wrapper, to right */
-      text-align: right;
-    }
-
-    h4 {
-      margin: 4px 0 0 0;
-    }
   }
 
   .listing-description {
-    /* Pushes .listing-controls to the bottom of container */
     flex-grow: 1;
+    flex-shrink: 0;
     /* Creates space between the description text, buttons and title */
-    margin: 1rem 0rem 1rem 0rem;
+    margin: 0.5rem 0rem 0.5rem 0.5rem;
+
+    & > * {
+      /* Limit height of description on smaller screens */
+      max-height: 30vh;
+      /* Add padding to visually separate scrollbar from content */
+      padding-right: 0.5rem;
+      overflow-y: auto;
+    }
   }
 
-  .listing-controls {
+  .listing-footer {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .listing-due-date {
-      /* Pushes button to the right of container */
       display: flex;
-      flex-grow: 1;
+      overflow-x: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
       align-items: center;
-      padding-top: 6px;
     }
+
+    .listing-due-icon {
+      margin-right: 0.4rem;
+    }
+  }
+
+  .listing-finalise-button,
+  .listing-interact-button {
+    /* Prevent <div> container collapsing and forcing button text to two lines */
+    flex-grow: 0;
+    flex-shrink: 0;
   }
 }
 
